# devcontainer-boilerplate-python-uv-fastapi

./: .gitignore  README.md
.devcontainer/: devcontainer.json
sample-service/: README.md  pyproject.toml
sample-service/src/sample_service/: __init__.py  base.py
